Fix lua script path and add README Info

--- a/pink-gauges/conky.conf
+++ b/pink-gauges/conky.conf
@@ -34,7 +34,7 @@ conky.config = {
     use_spacer = 'none',
     show_graph_scale = false,
     show_graph_range = false,
-	lua_load = './conky_gaugues.lua',
+	lua_load = './conky_gauges.lua',
 	lua_draw_hook_post = 'main'
 }
 
