Changed used to utilised

--- a/pink-gauges/conky.conf
+++ b/pink-gauges/conky.conf
@@ -51,11 +51,11 @@ ${font Teko:normal:size=14}${color1}${top_mem name 1}${goto 160}${top_mem mem 1}
 ${font Teko:normal:size=14}${color1}${top_mem name 2}${goto 160}${top_mem mem 2}%
 ${font Teko:normal:size=14}${color1}${top_mem name 3}${goto 160}${top_mem mem 3}%
 ${color}${memgraph 40,200 F867FA F867FA}
-${voffset -15}${font Teko:normal:size=12}${color1}$mem/$memmax ($memperc% used)
+${voffset -15}${font Teko:normal:size=12}${color1}$mem/$memmax ($memperc% utilised)
 ${voffset 80}${font Teko:bold:size=18}${color}GPU //
 ${font Teko:normal:size=14}${color1}${nvidia modelname}
 ${color}${nvidiagraph gpuutil 40,200 F867FA F867FA}
-${voffset -15}${font Teko:normal:size=12}${color1}${nvidia mem} / ${nvidia memtotal}GiB (${nvidia memperc}% used)
+${voffset -15}${font Teko:normal:size=12}${color1}${nvidia mem} / ${nvidia memtotal}GiB (${nvidia memperc}% utilised)
 ${voffset -165}${alignr}${font Teko:normal:size=40}${color}${time %A}
 ${voffset -35}${alignr}${font Teko:normal:size=24}${alignr}${color}${time %d} ${alignr}${color1}${time %B, %Y}
 ${voffset -15}${alignr}${font Teko:normal:size=48}${color1}${time %I:%M %p}
