Tweaks to layout

--- a/pink-gauges/conky.conf
+++ b/pink-gauges/conky.conf
@@ -40,7 +40,7 @@ conky.config = {
 
 -- ${voffset 140}
 conky.text = [[
-${alignr}${font Teko:bold:size=18}${color}CPU //
+${alignr}${font Teko:bold:size=18}${color}\\ CPU
 ${font Teko:normal:size=14}${color1}${goto 710}${top name 1}${alignr}${top cpu 1}%
 ${font Teko:normal:size=14}${color1}${goto 710}${top name 2}${alignr}${top cpu 2}%
 ${font Teko:normal:size=14}${color1}${goto 710}${top name 3}${alignr}${top cpu 3}%
