Layout tweaks, and gauge segment value accuracy when drawing the gauge

--- a/pink-gauges/conky.conf
+++ b/pink-gauges/conky.conf
@@ -41,15 +41,15 @@ conky.config = {
 -- ${voffset 140}
 conky.text = [[
 ${alignr}${font Teko:bold:size=18}${color}\\ CPU
-${font Teko:normal:size=14}${color1}${goto 710}${top name 1}${alignr}${top cpu 1}%
-${font Teko:normal:size=14}${color1}${goto 710}${top name 2}${alignr}${top cpu 2}%
-${font Teko:normal:size=14}${color1}${goto 710}${top name 3}${alignr}${top cpu 3}%
+${font Teko:normal:size=14}${color1}${goto 706}${top name 1}${alignr}${top cpu 1}%
+${font Teko:normal:size=14}${color1}${goto 706}${top name 2}${alignr}${top cpu 2}%
+${font Teko:normal:size=14}${color1}${goto 706}${top name 3}${alignr}${top cpu 3}%
 ${alignr}${color}${cpugraph 40,200 F867FA F867FA -t}
-${voffset -15}${alignr}${color1}${font Teko:normal:size=12}${threads} processes 
+${voffset -15}${alignr}${color1}${font Teko:normal:size=12}${processes} processes ($cpu% utilised)
 ${voffset -200}${font Teko:bold:size=18}${color}RAM // 
-${font Teko:normal:size=14}${color1}${top_mem name 1}${goto 160}${top_mem mem 1}%
-${font Teko:normal:size=14}${color1}${top_mem name 2}${goto 160}${top_mem mem 2}%
-${font Teko:normal:size=14}${color1}${top_mem name 3}${goto 160}${top_mem mem 3}%
+${font Teko:normal:size=14}${color1}${top_mem name 1}${goto 164}${top_mem mem 1}%
+${font Teko:normal:size=14}${color1}${top_mem name 2}${goto 164}${top_mem mem 2}%
+${font Teko:normal:size=14}${color1}${top_mem name 3}${goto 164}${top_mem mem 3}%
 ${color}${memgraph 40,200 F867FA F867FA}
 ${voffset -15}${font Teko:normal:size=12}${color1}$mem/$memmax ($memperc% utilised)
 ${voffset 80}${font Teko:bold:size=18}${color}GPU //
