Minor green theme tweaks, add Outrun theme

--- a/green-gauges/conky.conf
+++ b/green-gauges/conky.conf
@@ -1,11 +1,11 @@
 conky.config = {
-    alignment = 'br',
+    alignment = 'bm',
     background = true,
     border_width = 1,
     cpu_avg_samples = 2,
-    default_color = '62bb51',
-    default_outline_color = '62bb51',
-    default_shade_color = '62bb51',
+    default_color = '62BB51',
+    default_outline_color = '62BB51',
+    default_shade_color = '62BB51',
 	color1 = 'FFFFFF',
     double_buffer = true,
     draw_borders = false,
@@ -44,17 +44,17 @@ ${alignr}${offset -10}${font Teko:bold:size=18}${color}\\ CPU
 ${offset -10}${font Teko:normal:size=14}${color1}${goto 696}${top name 1}${alignr}${offset -10}${top cpu 1}%
 ${offset -10}${font Teko:normal:size=14}${color1}${goto 696}${top name 2}${alignr}${offset -10}${top cpu 2}%
 ${font Teko:normal:size=14}${color1}${goto 696}${top name 3}${alignr}${offset -10}${top cpu 3}%
-${alignr}${offset -10}${color}${cpugraph 40,200 62bb51 62bb51 -t}
+${alignr}${offset -10}${color}${cpugraph 40,200 FFFFFF FFFFFF -t}
 ${voffset -15}${alignr}${offset -10}${color1}${font Teko:normal:size=12}${processes} processes ($cpu% utilised)
 ${voffset -200}${offset 10}${font Teko:bold:size=18}${color}RAM // 
 ${offset 10}${font Teko:normal:size=14}${color1}${top_mem name 1}${goto 164}${top_mem mem 1}%
 ${offset 10}${font Teko:normal:size=14}${color1}${top_mem name 2}${goto 164}${top_mem mem 2}%
 ${offset 10}${font Teko:normal:size=14}${color1}${top_mem name 3}${goto 164}${top_mem mem 3}%
-${offset 10}${color}${memgraph 40,200 62bb51 62bb51}
+${offset 10}${color}${memgraph 40,200 FFFFFF FFFFFF}
 ${offset 10}${voffset -15}${font Teko:normal:size=12}${color1}$mem/$memmax ($memperc% utilised)
 ${offset 10}${voffset 80}${font Teko:bold:size=18}${color}GPU //
 ${offset 10}${font Teko:normal:size=14}${color1}${nvidia modelname}
-${offset 10}${color}${nvidiagraph gpuutil 40,200 62bb51 62bb51}
+${offset 10}${color}${nvidiagraph gpuutil 40,200 FFFFFF FFFFFF}
 ${offset 10}${voffset -15}${font Teko:normal:size=12}${color1}${nvidia mem} / ${nvidia memtotal}GiB (${nvidia memperc}% utilised)
 ${voffset -205}${alignr}${offset -10}${font Teko:normal:size=40}${color}${time %A}
 ${voffset -50}${alignr}${offset -10}${font Teko:normal:size=24}${alignr}${offset -10}${color}${time %d} ${alignr}${offset -10}${color1}${time %B, %Y}
