Outrun theme tweaks

--- a/outrun/conky.conf
+++ b/outrun/conky.conf
@@ -6,7 +6,7 @@ conky.config = {
     default_color = 'fe3e91',
     default_outline_color = 'fe3e91',
     default_shade_color = 'fe3e91',
-    font = 'Teko:size=12',
+    font = 'Technology:size=12',
     font1 = 'Championship:style=Regular:size=200',
     font2 = 'outrun future:style=Regular:size=60',
     font3 = 'outrun future:style=Regular:size=16',
@@ -48,8 +48,8 @@ conky.text = [[
     ${voffset -144}${offset 220}${color}${memgraph 40,200 fe3e91 fe3e91}
     ${voffset -144}${offset 465}${color}${nvidiagraph gpuutil 40,200 fe3e91 fe3e91}
     ${voffset -154}${offset -20}${font}${color1}${processes} processes ($cpu% utilised)
-    ${voffset -24}${offset 295}${font}${color1}$mem/$memmax ($memperc% utilised)
-    ${voffset -24}${offset 540}${font}${color1}${nvidia mem}MiB / ${nvidia memtotal}MiB (${nvidia memperc}% utilised)
+    ${voffset -16}${offset 278}${font}${color1}$mem/$memmax ($memperc% utilised)
+    ${voffset -16}${offset 522}${font}${color1}${nvidia mem}MiB / ${nvidia memtotal}MiB (${nvidia memperc}% utilised)
     ${voffset -114}${offset 50}${font3}${color}CPU
     ${voffset -38}${offset 280}${font3}${color}RAM
     ${voffset -38}${offset 525}${font3}${color}GPU
